Removed stage build

--- a/13/Dockerfile
+++ b/13/Dockerfile
@@ -1,24 +1,3 @@
-# Php repository.
-# (This is a workaround when behind a proxy to prevent 'Permission denied' from php.earth repo)
-FROM craftdock/alpine-base as php_repository
-
-RUN \
-	# Print executed commands
-	set -x \
-    # Update repository indexes
-    && apk-update \
-    # Add packages
-    && apk-install --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
-        wget \
-    # Create php repository folder
-    && mkdir -p /php.earth/x86_64/ \
-    && cd /php.earth/x86_64/ \
-    # Copy all packages from  php.earth repo to /php.earth/x86_64
-    && wget -r -nd -np -k http://repos.php.earth/alpine/v3.7/x86_64/ \
-	# Clear apk's cache
-	&& apk-cleanup
-
-
 # Nextcloud
 FROM craftdock/alpine-php7:7.1
 
@@ -30,9 +9,6 @@ ENV NEXTCLOUD_VERSION 13.0.4
 
 # Trust this project public key to trust the php packages.
 ADD https://repos.php.earth/alpine/phpearth.rsa.pub /etc/apk/keys/phpearth.rsa.pub
-
-# Copy all packages from
-COPY --from=php_repository /php.earth/x86_64 /tmp/php.earth/x86_64
 
 
 # Ensure nextcloud user exists
@@ -47,7 +23,7 @@ RUN \
     # Update repository indexes
     && apk-update \
     # Add recommanded packages : https://docs.nextcloud.com/server/12/admin_manual/installation/source_installation.html#prerequisites-label
-    && apk-install --repository /tmp/php.earth \
+    && apk-install --repository https://repos.php.earth/alpine/v3.7 \
         # Required : ctype, dom, GD, iconv, JSON, libxml, mbstring, posix, SimpleXML, XMLReader, XMLWriter ,zip, zlib
         php7.1-ctype \
         php7.1-dom \
@@ -102,7 +78,7 @@ RUN \
     && apk-install --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ \
         samba \
     # Add temporary packages to compile libsmbclient-php
-    && apk-install --repository /tmp/php.earth --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ --virtual .build-dependencies \
+    && apk-install --repository https://repos.php.earth/alpine/v3.7 --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ --virtual .build-dependencies \
         git \
         autoconf \
         automake \
