--- a/.example/caddy-redis-mariadb/web/Dockerfile
+++ b/.example/caddy-redis-mariadb/web/Dockerfile
@@ -1,4 +1,13 @@
 FROM dsuite/caddy:latest
 
+# Define plugins needed by caddy
+ENV PLUGINS=""
+
+# Add plugins to caddy
+RUN bash -c '/usr/local/bin/caddy-install.sh'
+
 # Copy scripts
-COPY ./rootfs /
+COPY rootfs /
+
+# Add volume to allow persistence
+VOLUME ["/var/log"]
