--- a/.example/caddy-redis-mariadb/docker-compose.yml
+++ b/.example/caddy-redis-mariadb/docker-compose.yml
@@ -48,13 +48,14 @@ services:
       - PHP_FPM_PM_START_SERVER=12                  # https://docs.nextcloud.com/server/14/admin_manual/configuration_server/server_tuning.html
       - PHP_FPM_PM_MIN_SPARE_SERVERS=6              #
       - PHP_FPM_PM_MAX_SPARE_SERVERS=18             #
-      - CORE_FILE_UPLOADS=1
-      - CORE_UPLOAD_TMP_DIR=/var/www/nextcloud/data/upload-tmp
-      - CORE_UPLOAD_MAX_FILESIZE=4G
-      - CORE_POST_MAX_SIZE=4G
-      - CORE_OUTPUT_BUFFERING=0
-      - CORE_MAX_INPUT_TIME=7200
-      - CORE_MAX_EXECUTION_TIME=7200
+      - CORE_FILE_UPLOADS=1                         #
+      - CORE_UPLOAD_TMP_DIR=/var/www/upload-tmp     #
+      - CORE_UPLOAD_MAX_FILESIZE=4G                 #
+      - CORE_POST_MAX_SIZE=4G                       # More tunning
+      - CORE_OUTPUT_BUFFERING=0                     # https://www.techandme.se/increase-max-file-size/
+      - CORE_MAX_INPUT_TIME=7200                    #
+      - CORE_MAX_EXECUTION_TIME=7200                #
+      - CORE_MEMORY_LIMIT=1024M
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_PASSWORD=MyDbPassword
@@ -70,18 +71,23 @@ services:
 
   # Caddy
   web:
-    build: ./web
+    build:
+      context: ./web
+      args:
+        http_proxy: ${http_proxy}
+        https_proxy: ${https_proxy}
     container_name: nextcloud_web
     restart: unless-stopped
     environment:
+      - CADDY_DOMAIN=localhost:80
       - PHP_FPM_HOST=app
       - PHP_FPM_PORT=9000
-      - CADDY_DOMAIN=localhost:80
       #- CADDY_CA=https://acme-staging.api.letsencrypt.org/directory     # remove CADDY_CA=https://acme-staging.api.letsencrypt.org/directory in production
       #- CADDY_DOMAIN=nextcloud.example.org
       #- CADDY_EMAIL=me@example.org
     volumes:
       - nextcloud_www:/var/www:ro
+      - $PWD/tmp/nextcloud/log:/var/log
       - certs:/etc/caddy/certificates
     ports:
         - "80:80"
