--- a/.example/nginx-redis-mariadb/app/Dockerfile
+++ b/.example/nginx-redis-mariadb/app/Dockerfile
@@ -1,9 +1,9 @@
 FROM dsuite/nextcloud-fpm:16
 
-# Copy scripts
+# Copy config
 COPY config/*.php /usr/src/nextcloud/config/
 
 # Nextcloud tmp directory
 RUN \
-    mkdir -p /var/www/nextcloud/data/upload-tmp \
-    && chown -R www-data:www-data /var/www/nextcloud/data/upload-tmp
+    mkdir -p /var/www/upload-tmp \
+    && chown -R www-data:www-data /var/www/upload-tmp
