--- a/.example/nginx-redis-mariadb/web/Dockerfile
+++ b/.example/nginx-redis-mariadb/web/Dockerfile
@@ -1,8 +1,17 @@
 FROM nginx:alpine
 
-# Ensure www-data user exists
-# 82 is the standard uid/gid for "www-data" in Alpine
-RUN set -x && addgroup -g 82 -S www-data && adduser -u 82 -S -D -G www-data www-data
 
-# Copy scripts
-COPY ./nginx.conf /etc/nginx/nginx.conf
+RUN set -x \
+    # Ensure www-data user exists
+    # 82 is the standard uid/gid for "www-data" in Alpine
+    && sh -c 'addgroup -g 82 -S www-data 2>/dev/null || exit 0'  \
+    && sh -c 'adduser -u 82 -S -D -s /sbin/nologin -G www-data -g www-data www-data 2>/dev/null || exit 0' \
+    # Add nginx user to www-data
+    && apk --no-cache add shadow \
+    && usermod -aG www-data nginx
+
+# Copy config
+COPY config/*.conf /etc/nginx/
+
+# Add volume to allow persistence
+VOLUME ["/var/log"]
