--- a/.example/nginx-redis-mariadb/web/config/nginx.conf
+++ b/.example/nginx-redis-mariadb/web/config/nginx.conf
@@ -6,7 +6,7 @@ user  www-data;
 worker_processes  4;
 
 # Configures logging.
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/log/nextcloud_errors.log warn;
 
 # Defines a file that will store the process ID of the main process.
 pid        /var/run/nginx.pid;
@@ -25,7 +25,7 @@ http {
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nextcloud_access.log  main;
 
     # Enables or disables the use of sendfile().
     sendfile        on;
