--- a/.example/nginx-redis-mariadb/web/config/nginx.conf
+++ b/.example/nginx-redis-mariadb/web/config/nginx.conf
@@ -86,6 +86,7 @@ http {
         # set max upload size
         client_max_body_size 10G;
       	client_body_timeout 120s;
+        add_header X-Accel-Buffering no;
 
         # fastcgi config
         fastcgi_buffers 64 4K;
