--- a/.example/nginx-redis-mariadb/Makefile
+++ b/.example/nginx-redis-mariadb/Makefile
@@ -2,15 +2,15 @@
 DIR:=$(strip $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST)))))
 
 build:
-	echo "**** Build containers ****"
+	@echo "**** Build containers ****"
 	docker-compose --project-name nextcloud build
 
 run: build
-	echo "**** Running containers ... ****"
+	@echo "**** Running containers ... ****"
 	docker-compose --project-name nextcloud up
 
 stop:
-	echo "**** Stopping containers ... ****"
+	@echo "**** Stopping containers ... ****"
 	docker-compose --project-name nextcloud down
 
 clean:
