--- a/make.env
+++ b/make.env
@@ -23,3 +23,8 @@ NEXTCLOUD_16_MAJOR=16
 NEXTCLOUD_16_VERSION=16.0.6
 NEXTCLOUD_16_PHP=7.3
 
+# Nextcloud 17
+NEXTCLOUD_17_MAJOR=17
+NEXTCLOUD_17_VERSION=17.0.1
+NEXTCLOUD_17_PHP=7.3
+
