--- a/.example/nginx-redis-mariadb/web/nginx.conf
+++ b/.example/nginx-redis-mariadb/web/nginx.conf
@@ -113,10 +113,10 @@ http {
         #rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json
         # last;
         location = /.well-known/carddav {
-            return 301 $scheme://$host/remote.php/carddav;
+            return 301 $scheme://$host/remote.php/dav;
         }
         location = /.well-known/caldav {
-            return 301 $scheme://$host/remote.php/caldav;
+            return 301 $scheme://$host/remote.php/dav;
         }
 
         # set max upload size
