--- a/make.env
+++ b/make.env
@@ -27,3 +27,8 @@ NEXTCLOUD_16_PHP=7.3
 NEXTCLOUD_17_MAJOR=17
 NEXTCLOUD_17_VERSION=17.0.3
 NEXTCLOUD_17_PHP=7.3
+
+# Nextcloud 18
+NEXTCLOUD_18_MAJOR=18
+NEXTCLOUD_18_VERSION=18.0.0
+NEXTCLOUD_18_PHP=7.3
