--- a/Dockerfiles/Dockerfile.template
+++ b/Dockerfiles/Dockerfile.template
@@ -2,9 +2,16 @@ FROM dsuite/alpine-php:{{NEXTCLOUD_PHP}}-fpm
 
 
 LABEL maintainer="Hexosse <hexosse@gmail.com>" \
-      description="Nextcloud image based on alpine with runit process supervisor." \
-      vendor="docker-suite" \
-      license="MIT"
+    org.opencontainers.image.title="docker-suite dsuite/nextcloud image" \
+    org.opencontainers.image.description="Nextcloud image based on alpine with runit process supervisor" \
+    org.opencontainers.image.authors="Hexosse <hexosse@gmail.com>" \
+    org.opencontainers.image.vendor="docker-suite" \
+    org.opencontainers.image.licenses="MIT" \
+    org.opencontainers.image.url="https://github.com/docker-suite/nextcloud" \
+    org.opencontainers.image.source="https://github.com/docker-suite/nextcloud" \
+    org.opencontainers.image.documentation="https://github.com/docker-suite/nextcloud/blob/master/Readme.md" \
+    org.opencontainers.image.created="{{DOCKER_IMAGE_CREATED}}" \
+    org.opencontainers.image.revision="{{DOCKER_IMAGE_REVISION}}"
 
 
 ENV NEXTCLOUD_MAJOR="{{NEXTCLOUD_MAJOR}}" \
