--- a/make.env
+++ b/make.env
@@ -32,3 +32,8 @@ NEXTCLOUD_17_PHP=7.3
 NEXTCLOUD_18_MAJOR=18
 NEXTCLOUD_18_VERSION=18.0.6
 NEXTCLOUD_18_PHP=7.4
+
+# Nextcloud 19
+NEXTCLOUD_19_MAJOR=19
+NEXTCLOUD_19_VERSION=19.0.0
+NEXTCLOUD_19_PHP=7.4
